5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1618_2921.log
== TEST (2019-04-02 10:05:03) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x1 = j1
x2 = j2 // 25

total = x1 + x2

print(total)
-- OUTPUT:
145.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:05:15) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x1 = j1
x2 = j2 // 25

total = x1 + x2

print(total)
-- EXECUTION TIME:
0.158301
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
145.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
103.99
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
105.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:06:46) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x1 = j1
x2 = j2 - (j2 * (25 / 100)

total = x1 + x2

print(round(total, 2))
-- ERROR:
File "XXXX", line 7
    total = x1 + x2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:07:19) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x1 = j1
x2 = j2 - (j2 * (25 / 100)

total = x1 + x2

print(round(total, 2))
-- ERROR:
File "XXXX", line 7
    total = x1 + x2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:07:20) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x1 = j1
x2 = j2 - (j2 * (25 / 100)

total = x1 + x2

print(round(total, 2))
-- EXECUTION TIME:
0.134894
-- ERROR:
  File "/home/codebench/codes/1618/2921/main.py", line 7
    total = x1 + x2
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:07:20) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x1 = j1
x2 = j2 - (j2 * (25 / 100)

total = x1 + x2

print(round(total, 2))
-- ERROR:
File "XXXX", line 7
    total = x1 + x2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:08:07) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x1 = j1
x2 = j2 - (j2 * (25 / 100)

total = x1 + x2

print(round(total, 2))
-- ERROR:
File "XXXX", line 7
    total = x1 + x2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:08:18) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x1 = j1
x2 = j2 - (j2 * (25 / 100)

total da compra = x1 + x2

print(round(total, 2))
-- ERROR:
File "XXXX", line 7
    total da compra = x1 + x2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:09:49) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = j2 - (j2 * (25 / 100)

total = (j1 + j2) / x
			 
print(round(total, 2))
-- ERROR:
File "XXXX", line 6
    total = (j1 + j2) / x
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:09:55) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = j2 - (j2 * (25 / 100)

total = (j1 + j2) //  x
			 
print(round(total, 2))
-- ERROR:
File "XXXX", line 6
    total = (j1 + j2) //  x
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:19:32) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = j2 - (j2 * (25 / 100)

total = (j1 + j2) //  x
			 
print(round(total, 2))
-- ERROR:
File "XXXX", line 6
    total = (j1 + j2) //  x
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:19:44) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = j2 - (j2 * (25 / 100)
			 
print(round(x, 2))
-- ERROR:
File "XXXX", line 6
    print(round(x, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:19:49) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = j2 - (j2 * (25 / 100)
-- ERROR:
File "XXXX", line 5
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:19:58) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = j2 - (j2 * (25 // 100)
-- ERROR:
File "XXXX", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:19:59) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = j2 - (j2 * (25 // 100)
-- EXECUTION TIME:
0.136046
-- ERROR:
  File "/home/codebench/codes/1618/2921/main.py", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:19:59) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = j2 - (j2 * (25 // 100)
-- ERROR:
File "XXXX", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:21:01) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))
-- ERROR:
File "XXXX", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:21:01) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))
-- EXECUTION TIME:
0.102674
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:

-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:

-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:21:01) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))
-- ERROR:
File "XXXX", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:22:50) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = 25 / 100

x1 = j1
x2 = j2 / x

total = x1 + x2
-- ERROR:
File "XXXX", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:23:05) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = 25 / 100

x1 = j1
x2 = j2 / x

total = x1 + x2
-- ERROR:
File "XXXX", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:23:21) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = 25 / 100

x1 = j1
x2 = j2 / x

total = x1 + x2

print(total)
-- OUTPUT:
499.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:23:28) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = 25 / 100

x1 = j1
x2 = j2 / x

total = x1 + x2

print(total)
-- EXECUTION TIME:
0.171487
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
499.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
539.9499999999999
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
445.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:23:52) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = 25 / 100

x1 = j1
x2 = j2 / x

total = x1 + x2

print(round(total, 2)
-- ERROR:
File "XXXX", line 12
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:24:06) 
-- CODE:
j1 = int(input("Valor do jogo 1: "))
j2 = int(input("Valor do jogo 2: "))

x = 25 / 100

x1 = j1
x2 = j2 / x

total = x1 + x2

print(round(total, 2)
-- ERROR:
File "XXXX", line 12
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:25:59) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = 25 / 100

totalj1 = j1
totalj2 = j2 - (j2 / x)

totalf = totalj1 + totalj2

print(round(totalf, 2)
-- ERROR:
File "XXXX", line 12
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:26:13) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = 25 / 100

totalj1 = j1
totalj2 = j2 - (j2 / x)

totalf = totalj1 + totalj2

print(round(totalf, 2)
-- ERROR:
File "XXXX", line 12
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:12) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = 25 / 100

totalj2 = j2 - (j2 / x)

print(round(totalj2, 2)
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:39) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

x = 25 / 100

totalj2 = j2 - (j2 * (25 / 100))

print(round(totalj2, 2)
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:51) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

totalj2 = j2 - (j2 * (25 / 100))

print(round(totalj2, 2)
-- ERROR:
File "XXXX", line 7
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:51) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

totalj2 = j2 - (j2 * (25 / 100))

print(round(totalj2, 2)
-- ERROR:
File "XXXX", line 7
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:51) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

totalj2 = j2 - (j2 * (25 / 100))

print(round(totalj2, 2)
-- ERROR:
File "XXXX", line 7
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:52) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

totalj2 = j2 - (j2 * (25 / 100))

print(round(totalj2, 2)
-- ERROR:
File "XXXX", line 7
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:52) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

totalj2 = j2 - (j2 * (25 / 100))

print(round(totalj2, 2)
-- ERROR:
File "XXXX", line 7
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:29:35) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

totalj2 = j2 - (j2 * d)

print(round(totalj2, 2)
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:29:47) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

print(round(total, 2)
-- ERROR:
File "XXXX", line 9
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:31:17) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

print(j2)
print(round(total, 2))
-- OUTPUT:
89.25
66.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:31:33) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

print(j2)
print(round(total, 2))
-- EXECUTION TIME:
0.141848
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
89.25
66.94
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
109.99
82.49
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
85.87
64.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:32:25) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- OUTPUT:
89.25
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:32:32) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- EXECUTION TIME:
0.180776
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
89.25
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
109.99
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
85.87
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:32:36) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- OUTPUT:
89.25
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:33:25) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- OUTPUT:
89.25
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:33:33) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- EXECUTION TIME:
0.188737
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
89.25
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
109.99
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
85.87
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:33:35) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- OUTPUT:
89.25
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:34:23) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 / d

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- OUTPUT:
89.25
499.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:34:31) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 / d

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- EXECUTION TIME:
0.161019
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
89.25
499.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
109.99
539.95
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
85.87
445.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:34:44) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 // 100

total = j2 / d

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = j2 / d
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:35:01) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 100 / 25

total = j2 / d

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- OUTPUT:
89.25
164.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:35:08) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 100 / 25

total = j2 / d

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- EXECUTION TIME:
0.186748
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
89.25
164.66
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
109.99
127.49
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
85.87
123.59
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:36:49) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * (25 / 100))

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- OUTPUT:
89.25
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:37:05) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * (25 / 100))

total1 = j1 + total

print(j2)
print(round(total1, 2))
-- EXECUTION TIME:
0.114478
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
89.25
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
109.99
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
85.87
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:37:30) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * (25 / 100))

total1 = j1 + total

print(total)
print(round(total1, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:37:47) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * (25 / 100))

total1 = j1 + total

print(total)
print(round(total1, 2))
-- EXECUTION TIME:
0.273434
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
Valor do jogo 1: Valor do jogo 2: 64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:37:59) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

total = j2 - (j2 * (25 / 100))

total1 = j1 + total

print(total)
print(round(total1, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:38:08) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

total = j2 - (j2 * (25 / 100))

total1 = j1 + total

print(total)
print(round(total1, 2))
-- EXECUTION TIME:
0.159086
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:38:19) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

total = j2 - (j2 * (25 / 100))

total1 = j1 + total

print(total)
print(round(total1, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:38:27) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

total = j2 - (j2 * (25 / 100))

total1 = j1 + total

print(total)
print(round(total1, 2))
-- EXECUTION TIME:
0.208607
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:38:28) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

total = j2 - (j2 * (25 / 100))

total1 = j1 + total

print(total)
print(round(total1, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:40:00) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(total)
print(round(total1, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:40:05) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(total)
print(round(total1, 2))
-- EXECUTION TIME:
0.2374
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:40:33) 
-- CODE:
j1 = int(input("Valor do jogo 1: "))
j2 = int(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(total)
print(round(total1, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    j1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:40:39) 
-- CODE:
j1 = int(input("Valor do jogo 1: "))
j2 = int(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(total)
print(round(total1, 2))
-- EXECUTION TIME:
0.226896
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2921/main.py", line 1, in <module>
    j1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:40:45) 
-- CODE:
j1 = int(input("Valor do jogo 1: "))
j2 = int(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(total)
print(round(total1, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    j1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:41:03) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(total)
print(round(total1, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:41:11) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j2 * d)

total1 = j1 + total

print(total)
print(round(total1, 2))
-- EXECUTION TIME:
0.123042
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:41:45) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total2 = j2 - (j2 * d)
total = j1 + total

print(total2)
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = j1 + total
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:41:57) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total2 = j2 - (j2 * d)
total = j1 + total2

print(total2)
print(round(total, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:42:04) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total2 = j2 - (j2 * d)
total = j1 + total2

print(total2)
print(round(total, 2))
-- EXECUTION TIME:
0.197983
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:43:15) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:43:23) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- EXECUTION TIME:
0.197838
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:43:34) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

#print(x)
#print(round(total, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:43:42) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:43:49) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- EXECUTION TIME:
0.1526
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:45:02) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(float(round(total, 2))
-- ERROR:
File "XXXX", line 11
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:46:14) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:46:22) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- EXECUTION TIME:
0.177848
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:47:58) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:48:13) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:48:21) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- EXECUTION TIME:
0.207295
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:49:17) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:49:23) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- EXECUTION TIME:
0.14084
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:51:34) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 % 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- OUTPUT:
-2142.0
-1999.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:52:17) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 % 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- EXECUTION TIME:
0.228213
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
-2142.0
-1999.65
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
-2639.76
-2539.77
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
-2060.88
-1958.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:52:27) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- EXECUTION TIME:
0.164059
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:52:30) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:52:35) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- EXECUTION TIME:
0.186063
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:53:19) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 * d
total = j1 + x

print(x)
print(round(total, 2))
-- OUTPUT:
22.3125
164.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:53:25) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 * d
total = j1 + x

print(x)
print(round(total, 2))
-- EXECUTION TIME:
0.296112
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
22.3125
164.66
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
27.4975
127.49
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
21.4675
123.59
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:53:40) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:53:50) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- EXECUTION TIME:
0.151179
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:54:19) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:54:29) 
-- CODE:
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

x = j2 - (j2 * d)
total = j1 + x

print(x)
print(round(total, 2))
-- EXECUTION TIME:
0.182557
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
